--- a/notes.sty
+++ b/notes.sty
@@ -2,7 +2,7 @@
 %    > I haven't organized them terribly much yet, however plan to soon.
 
 \usepackage[T1]{fontenc}
-\usepackage[latin9]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage{geometry}
 \usepackage{url}
 \usepackage{amsthm}
@@ -108,6 +108,7 @@ Last Revision: \today
      \end{array}
    \right.}
 
+\newcommand{\expo}[1]{\exp \left\{ #1 \right\}}
 \newcommand{\trace}[1]{\mbox{Tr}\ensuremath{\left\{ #1 \right\}}}
 \newcommand{\tr}[1]{\trace{#1}}
 \newcommand{\bra}[1]{\ensuremath{\left\langle#1\right|}}
