--- a/notes.sty
+++ b/notes.sty
@@ -128,6 +128,7 @@ Last Revision: \today
 \newcommand{\kplx}{\ket{+}_x}
 \newcommand{\kmix}{\ket{-}_x}
 \newcommand{\kply}{\ket{+}_y}
+\newcommand{\pr}[1]{\left|#1\right|^2}
 \newcommand{\kmiy}{\ket{-}_y}
 \newcommand{\E}[1]{\langle #1 \rangle}
 \newcommand{\mtx}[1]{\left(\begin{matrix}#1\end{matrix}\right)}
