--- a/phys234/phys234.tex
+++ b/phys234/phys234.tex
@@ -952,7 +952,7 @@
           \end{align*}
           \item[(ii)] A source of atoms is prepared as 20\% $\kp$ and 80\% $\km_y$ and a measurement of the $x$-component of angular momentum is performed. What is the expectation value for this experiment?\newline
 
-          \[ \E{S_z} = \tr{S_x\rho} \]
+          \[ \E{S_x} = \tr{S_x\rho} \]
           and
           \begin{align*}
             \rho & = \sum_i P_i \ket{\lambda_i}\bra{\lambda_i} = \f{20}{100}\kp\bm + \f{80}{100}\km_y{}_y\bm
